--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
+    "embla-carousel-autoplay": "^8.5.2",
+    "embla-carousel-react": "^8.5.2",
     "lucide-react": "^0.469.0",
     "next": "15.0.1",
     "react": "18.3.1",
