--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "dayjs": "^1.11.13",
     "embla-carousel-autoplay": "^8.5.2",
     "embla-carousel-react": "^8.5.2",
+    "framer-motion": "^11.16.1",
     "lucide-react": "^0.469.0",
     "next": "15.0.1",
     "react": "18.3.1",
