--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
     "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-tabs": "^1.1.2",
+    "@radix-ui/react-toggle": "^1.1.1",
+    "@supabase/ssr": "^0.5.2",
+    "@supabase/supabase-js": "^2.49.1",
     "@tabler/icons-react": "^3.27.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -35,6 +39,7 @@
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^11.16.1",
     "lucide-react": "^0.469.0",
+    "mongodb": "^6.12.0",
     "next": "15.0.1",
     "react": "18.3.1",
     "react-day-picker": "8.10.1",
