--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mantine/core": "7.15.2",
     "@mantine/dates": "^7.15.3",
     "@mantine/hooks": "7.15.2",
+    "@mantine/notifications": "^7.17.1",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^6.3.1",
@@ -48,6 +49,7 @@
     "react-hook-form": "^7.54.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.1.0",
     "vaul": "^1.1.2",
     "zod": "^3.24.1"
   },
